tests/ui/specialization/issue-38091.stderr
error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:11:23
   |
LL |     default type Ty = ();
   |                       ^^ the trait `Valid` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/issue-38091.rs:19:1
   |
LL | trait Valid {}
   | ^^^^^^^^^^^
note: required by a bound in `Iterate::Ty`
  --> $DIR/issue-38091.rs:4:14
   |
LL |     type Ty: Valid;
   |              ^^^^^ required by this bound in `Iterate::Ty`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
